Coefficient modulus update. Updated coefficient modulus to ensure we are able to get scale stabilization.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,13 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tenseal.sealapi as seal\n",
     "import util\n",
     "from math import log2,ceil"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that using larger bit sizes for the primes in the coefficient modulus chain is advantageous since it allows for scale stabilization. With a larger prime and scale, we improve precision. "
    ]
   },
   {
@@ -30,18 +37,20 @@
       "/\n",
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
-      "|\tpoly_modulus_degree: 8192\n",
-      "|\tcoeff_modulus_size: 218 (49 30 30 30 30 49) bits\n",
-      "|\t Max Bit Count: 218\n"
+      "|\tpoly_modulus_degree: 16384\n",
+      "|\tcoeff_modulus_size: 300 (60 30 30 30 30 30 30 60) bits\n",
+      "|\t Max Bit Count: 438\n"
      ]
     }
    ],
    "source": [
     "parms = seal.EncryptionParameters(seal.SCHEME_TYPE.CKKS)\n",
-    "poly_modulus_degree = 8192\n",
+    "poly_modulus_degree = 2**14\n",
     "parms.set_poly_modulus_degree(poly_modulus_degree)\n",
-    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [49, 30,30,30,30, 49]))\n",
+    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [60, 30,30,30,30,30,30,60]))\n",
     "scale = pow(2.0, 30)\n",
+    "\n",
+    "primes = [coeff.value() for coeff in parms.coeff_modulus()]\n",
     "\n",
     "context = seal.SEALContext(parms,True,seal.SEC_LEVEL_TYPE.TC128)\n",
     "\n",
@@ -66,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of slots: 4096\n"
+      "Number of slots: 8192\n"
      ]
     }
    ],
@@ -206,9 +215,9 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.295992E-01\n",
+      "Encrypted result is: 1.296049E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: -7.7384E-07\n"
+      "Error is: 4.9466E-06\n"
      ]
     }
    ],
@@ -242,17 +251,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x^7 chain_index():\t0\n",
-      "x^5 chain_index():\t0\n",
-      "x^3 chain_index():\t0\n",
-      "x_copy chain_index():\t0\n"
+      "Original scale:\t1073741824.0\n",
+      "x^7 scale bef.:\t1073741824.0\n",
+      "x^7 chain_index():\t2\n",
+      "x^7 scale:\t1077287263.7895007\n",
+      "x^5 chain_index():\t2\n",
+      "x^5 scale:\t1076268401.596755\n",
+      "x^3 chain_index():\t3\n",
+      "x^3 scale:\t1075119178.714041\n",
+      "x_copy chain_index():\t2\n"
      ]
     }
    ],
@@ -266,10 +280,12 @@
     "# copied ciphertext\n",
     "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
     "evaluator.mod_switch_to_next_inplace(x7_enc)\n",
+    "print(\"Original scale:\\t\" + str(scale))\n",
+    "print(\"x^7 scale bef.:\\t\" + str(x7_enc.scale))\n",
     "square_and_multiply(x_copy, 7, evaluator, relin_keys,scale, encoder, x7_enc)\n",
     "\n",
     "print(\"x^7 chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
-    "\n",
+    "print(\"x^7 scale:\\t\" + str(x7_enc.scale))\n",
     "# Then x^5 \n",
     "x5_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(dummy_plain, x5_enc)\n",
@@ -280,6 +296,7 @@
     "square_and_multiply(x_copy, 5, evaluator, relin_keys,scale, encoder, x5_enc)\n",
     "\n",
     "print(\"x^5 chain_index():\\t\" + str(context.get_context_data(x5_enc.parms_id()).chain_index()))\n",
+    "print(\"x^5 scale:\\t\" + str(x5_enc.scale))\n",
     "\n",
     "# Now x^3\n",
     "x3_enc = seal.Ciphertext()\n",
@@ -295,10 +312,12 @@
     "# Since we only need 2 multiplications. \n",
     "\n",
     "print(\"x^3 chain_index():\\t\" + str(context.get_context_data(x3_enc.parms_id()).chain_index()))\n",
+    "print(\"x^3 scale:\\t\" + str(x3_enc.scale))\n",
     "\n",
     "# Finally, use the copy of x for calculations. \n",
     "\n",
-    "print(\"x_copy chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))"
+    "print(\"x_copy chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "\n"
    ]
   },
   {
