Final comments in .md

--- a/2b_ckks_encoder.ipynb
+++ b/2b_ckks_encoder.ipynb
@@ -276,29 +276,29 @@
    "outputs": [],
    "source": [
     "print('Scale in squared input: ' + str(encrypted.scale()) + ' (' + str(np.log2(encrypted.scale())) + ' bits)')\n",
-    "        << endl;\n",
-    "\n",
-    "print_line(__LINE__);\n",
-    "cout << \"Decrypt and decode.\" << endl;\n",
-    "decryptor.decrypt(encrypted, plain);\n",
-    "encoder.decode(plain, output);\n",
-    "cout << \"    + Result vector ...... Correct.\" << endl;\n",
-    "print_vector(output);\n",
-    "\n",
-    "/*\n",
+    "print('Decrypt and decode.')\n",
+    "decryptor.decrypt(encrypted, plain)\n",
+    "encoder.decode(plain, output)\n",
+    "print('\\t+ Result vector ...... Correct.')\n",
+    "print(output)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The CKKS scheme allows the scale to be reduced between encrypted computations.\n",
     "This is a fundamental and critical feature that makes CKKS very powerful and\n",
-    "flexible. We will discuss it in great detail in `3_levels.cpp' and later in\n",
-    "`4_ckks_basics.cpp'.\n",
-    "*/\n"
+    "flexible. We will discuss it in great detail in `3_levels.cpp` and later in\n",
+    "`4_ckks_basics.cpp`."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openmined-venv",
+   "display_name": "Python 3.9.7 ('secure-ml-venv')",
    "language": "python",
-   "name": "openmined-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,9 +310,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "51a1eaa9f94a8055b5f69fda38d5e2c63385f357b8ace33bd7f635ff4a855d53"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
