--- a/2a_batch_encoder.ipynb
+++ b/2a_batch_encoder.ipynb
@@ -375,9 +375,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "openmined-venv",
+   "display_name": "Python 3.9.7 ('secure-ml-venv')",
    "language": "python",
-   "name": "openmined-venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -389,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
