Updated CKKS encoder example.

--- a/2b_ckks_encoder.ipynb
+++ b/2b_ckks_encoder.ipynb
@@ -271,26 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scale in squared input: 1.152921504606847e+18 (60.0 bits)\n",
+      "[-5.068293803494718e-13, 1.210001494082472, 4.840001080295021, 10.890001288345392, 1.781565968336205e-11, 5.281918976196055e-13, 7.045305228866165e-13, 4.842436535973635e-14]\n"
+     ]
+    }
+   ],
    "source": [
-    "print('Scale in squared input: ' + str(encrypted.scale()) + ' (' + str(np.log2(encrypted.scale())) + ' bits)')\n",
-    "        << endl;\n",
-    "\n",
-    "print_line(__LINE__);\n",
-    "cout << \"Decrypt and decode.\" << endl;\n",
-    "decryptor.decrypt(encrypted, plain);\n",
-    "encoder.decode(plain, output);\n",
-    "cout << \"    + Result vector ...... Correct.\" << endl;\n",
-    "print_vector(output);\n",
-    "\n",
-    "/*\n",
-    "The CKKS scheme allows the scale to be reduced between encrypted computations.\n",
-    "This is a fundamental and critical feature that makes CKKS very powerful and\n",
-    "flexible. We will discuss it in great detail in `3_levels.cpp' and later in\n",
-    "`4_ckks_basics.cpp'.\n",
-    "*/\n"
+    "print('Scale in squared input: ' + str(encrypted.scale) + ' (' + str(np.log2(encrypted.scale)) + ' bits)')\n",
+    "decryptor.decrypt(encrypted, plain)\n",
+    "output = encoder.decode_double(plain)\n",
+    "print(output[0:8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The CKKS scheme allows the scale to be reduced between encrypted computations. This is a fundamental and critical feature that makes CKKS very powerful and flexible. We will discuss it in great detail in `3_levels.cpp` and later in `4_ckks_basics.cpp`."
    ]
   }
  ],
