First polynomial calculated + util for ct info
comparisons.ipynb shows an example of calculating the polynomial g(x),
from the sorting article.

Furthermore, util.py now contains a function print_info, which prints
information about a ciphertext, such as scale, chain index and decrypted
value.

--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
       "|Encryption parameters: \n",
       "|\tscheme: CKKS\n",
       "|\tpoly_modulus_degree: 16384\n",
-      "|\tcoeff_modulus_size: 300 (60 30 30 30 30 30 30 60) bits\n",
+      "|\tcoeff_modulus_size: 330 (60 35 35 35 35 35 35 60) bits\n",
       "|\t Max Bit Count: 438\n"
      ]
     }
@@ -46,9 +46,14 @@
    "source": [
     "parms = seal.EncryptionParameters(seal.SCHEME_TYPE.CKKS)\n",
     "poly_modulus_degree = 2**14\n",
+    "mod_pow = 35\n",
     "parms.set_poly_modulus_degree(poly_modulus_degree)\n",
-    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [60, 30,30,30,30,30,30,60]))\n",
-    "scale = pow(2.0, 30)\n",
+    "parms.set_coeff_modulus(seal.CoeffModulus.Create(poly_modulus_degree, [60, mod_pow,mod_pow,mod_pow,mod_pow,mod_pow,mod_pow,60]))\n",
+    "scale = pow(2.0, mod_pow)\n",
+    "\n",
+    "# What are the specific primes in the modulus chain? These help calculate exact scales \n",
+    "# of rescaled ciphertexts later on in this notebook. \n",
+    "modulus_chain = [modulus.value() for modulus in parms.coeff_modulus()]\n",
     "\n",
     "primes = [coeff.value() for coeff in parms.coeff_modulus()]\n",
     "\n",
@@ -68,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -161,31 +166,34 @@
      "output_type": "stream",
      "text": [
       "First data level parms_id():\n",
-      "[14462354278746949681, 4385329603355618587, 17753183925531246667, 16107203567870275891]\n",
+      "[8581331200408610277, 13302195022564177709, 1237030387993002687, 5771053831278510699]\n",
       "Original parms_id():\n",
-      "[14462354278746949681, 4385329603355618587, 17753183925531246667, 16107203567870275891]\n",
+      "[8581331200408610277, 13302195022564177709, 1237030387993002687, 5771053831278510699]\n",
       "Copy parms_id():\n",
-      "[7105380288797707681, 10044341341293513633, 4301081315499996817, 15826730858846034920]\n",
+      "[7388653974824800976, 12986223737403185069, 8737996544829265756, 18402466612834462340]\n",
       "\n",
       "Original scale\n",
-      "1099511627776.0\n",
+      "34359738368.0\n",
       "Modulus switched original parms_id():\n",
-      "[7105380288797707681, 10044341341293513633, 4301081315499996817, 15826730858846034920]\n",
+      "[7388653974824800976, 12986223737403185069, 8737996544829265756, 18402466612834462340]\n",
       "Modulus switched scale: \n",
-      "1099511627776.0\n",
+      "34359738368.0\n",
       "\n",
       "Primes in the coefficient modulus chain:\n",
-      "[1152921504606683137, 1072496641, 1072857089, 1073053697, 1073184769, 1073479681, 1073643521, 1152921504606748673]\n",
+      "[1152921504606683137, 34357411841, 34357444609, 34357805057, 34358788097, 34359214081, 34359410689, 1152921504606748673]\n",
       "\n",
       "Copy scale\n",
-      "1099612299264.6562\n",
+      "34360066050.12501\n",
       "Product scale:\n",
-      "1.2090365090869922e+24\n",
+      "1.1806028797894944e+21\n",
       "Product scale after rescale:\n",
-      "1126277963604038.0\n",
-      "1074102367.0235043\n",
-      "-0.0005859364290151674\n",
-      "-0.0005859368298737973\n"
+      "34360590350.1252\n",
+      "scale^3/P_1/P_2\n",
+      "34360590350.1252\n",
+      "Decrypted copy:\n",
+      "-0.5999999507772056\n",
+      "Decrypted original:\n",
+      "-0.5999999513003557\n"
      ]
     }
    ],
@@ -219,7 +227,6 @@
     "\n",
     "# What are the specific primes in the modulus chain? \n",
     "print(\"\\nPrimes in the coefficient modulus chain:\")\n",
-    "modulus_chain = [modulus.value() for modulus in parms.coeff_modulus()]\n",
     "print(modulus_chain)\n",
     "\n",
     "# What is the exact scale of the copied ciphertext?\n",
@@ -243,15 +250,19 @@
     "# Note that the exact scale of the new rescaled product\n",
     "# which happens to be the square of the original cipher is\n",
     "# exactly the scale of the original (scale) times the scale\n",
-    "# copy (scale**2)/modulus_chain[-2], which is then rescaled\n",
-    "# (divided by the next prime in the chain), modulus_chain[-3]\n",
+    "# copy (scale**2)/modulus_chain[-2] (the first prime), which \n",
+    "# is then rescaled (divided by the next prime in the chain), \n",
+    "# modulus_chain[-3]\n",
+    "print(\"scale^3/P_1/P_2\")\n",
     "print(scale**3/modulus_chain[-2]/modulus_chain[-3])\n",
     "\n",
     "tmp_result = seal.Plaintext()\n",
     "decryptor.decrypt(x_copy, tmp_result)\n",
+    "print(\"Decrypted copy:\")\n",
     "print(encoder.decode_double(tmp_result)[0])\n",
     "decryptor.decrypt(x_enc, tmp_result)\n",
-    "print(encoder.decode_double(tmp_result)[0])"
+    "print(\"Decrypted original:\")\n",
+    "print(encoder.decode_double(tmp_result)[0])\n"
    ]
   },
   {
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,10 +311,12 @@
     "            if res.data() == None:\n",
     "                raise ValueError(\"Ciphertext res must be initialized to 1.\")\n",
     "            else:\n",
+    "                #print(\"Current scale:\\t\" + str(res.scale))\n",
     "                evaluator.multiply_inplace(res, cipher)\n",
     "                relinearize_and_rescale_inplace(res, evaluator, relin_keys)\n",
     "                evaluator.square_inplace(cipher)\n",
     "                relinearize_and_rescale_inplace(cipher, evaluator, relin_keys)\n",
+    "                #print(\"Current scale:\\t\" + str(res.scale))\n",
     "        else:\n",
     "            evaluator.square_inplace(cipher)\n",
     "            relinearize_and_rescale_inplace(cipher,evaluator, relin_keys)\n",
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -332,15 +345,20 @@
      "output_type": "stream",
      "text": [
       "Exponent is 4 leading to circuit with depth 2\n",
-      "Encrypted result is: 1.296091E-01\n",
+      "Encrypted result is: 1.296002E-01\n",
       "True result is: 1.296000E-01\n",
-      "Error is: 9.1033E-06\n"
+      "Error is: 1.9327E-07\n"
      ]
     }
    ],
    "source": [
+    "# Need fresh ciphertext\n",
+    "encryptor.encrypt(x_plain, x_enc)\n",
+    "\n",
     "dummy_plain = seal.Plaintext()\n",
     "encoder.encode(1, scale, dummy_plain)\n",
+    "# Note that the ciphertext x7 is initialized as an encryption of 1,\n",
+    "# which is required by squared_and_multply \n",
     "x7_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(dummy_plain, x7_enc)\n",
     "# Have to waste one level to make square_and_multiply compatible \n",
@@ -368,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +397,7 @@
       "Ciphertext level after divByPo2: 6\n",
       "\n",
       "divByPo2 result: \n",
-      "-0.0005859390879507537\n",
+      "-0.000585937472349454\n",
       "True value: \n",
       "-0.0005859375000000001\n"
      ]
@@ -388,7 +406,6 @@
    "source": [
     "# Test divByPo2\n",
     "# Fresh ciphertext \n",
-    "x_enc = seal.Ciphertext()\n",
     "encryptor.encrypt(x_plain, x_enc)\n",
     "\n",
     "power = 10\n",
@@ -415,26 +432,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original scale:\t1073741824.0\n",
-      "x^7 scale bef.:\t1073741824.0\n",
+      "Original scale:\t34359738368.0\n",
+      "x^7 scale bef.:\t34359738368.0\n",
       "x^7 chain_index():\t2\n",
-      "x^7 scale:\t1.271836316735472e+30\n",
+      "x^7 scale:\t34367964214.10345\n",
       "x^5 chain_index():\t2\n",
-      "x^5 scale:\t1.2117704930954463e+24\n",
+      "x^5 scale:\t34365833833.954185\n",
       "x^3 chain_index():\t3\n",
-      "x^3 scale:\t1.1544004279697964e+18\n",
-      "x_copy chain_index():\t2\n"
+      "x^3 scale:\t34362720405.22447\n",
+      "x_copy chain_index():\t5\n"
      ]
     }
    ],
    "source": [
+    "# Fresh ciphertext:\n",
+    "encryptor.encrypt(x_plain, x_enc)\n",
+    "\n",
     "# First x^7\n",
     "dummy_plain = seal.Plaintext()\n",
     "encoder.encode(1, scale, dummy_plain)\n",
@@ -479,8 +499,8 @@
     "print(\"x^3 scale:\\t\" + str(x3_enc.scale))\n",
     "\n",
     "# Finally, use the copy of x for calculations. \n",
-    "\n",
-    "print(\"x_copy chain_index():\\t\" + str(context.get_context_data(x7_enc.parms_id()).chain_index()))\n",
+    "x_copy = bad_copy(x_enc, scale, evaluator, encoder)\n",
+    "print(\"x_copy chain_index():\\t\" + str(context.get_context_data(x_copy.parms_id()).chain_index()))\n",
     "\n"
    ]
   },
@@ -488,7 +508,195 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With all powers we need, we are now ready to calculate the value of the polynomial. Note however that all ciphertexts have different scale and that we need to change the level of x^3 to be able to compute sums of the powers. "
+    "We are now ready to multiply by the plain coefficients of the polynomial. Note however, that we might as well use addition and `divByPo2` to avoid further multiplications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_many_coeff(coeff: int, cipher: seal.Ciphertext,evaluator: seal.Evaluator, result: seal.Ciphertext):\n",
+    "    tmp = []\n",
+    "    for i in range(coeff):\n",
+    "        tmp.append(cipher)\n",
+    "    evaluator.add_many(tmp, result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35x/2^4\n",
+      "\tEnc. result:\t-1.3125001755103025\n",
+      "\tPlain result:\t-1.3125000000000002\n",
+      "\tScale:\t549761056802.0001\n",
+      "\tCh. ind:\t5\n",
+      "35x^3/2^4\n",
+      "\tEnc. result:\t-0.47250007385581344\n",
+      "\tPlain result:\t-0.47250000000000025\n",
+      "\tScale:\t549803526483.5916\n",
+      "\tCh. ind:\t3\n",
+      "21x^5/2^4\n",
+      "\tEnc. result:\t-0.10206002736599178\n",
+      "\tPlain result:\t-0.10206000000000007\n",
+      "\tScale:\t549853341343.267\n",
+      "\tCh. ind:\t2\n",
+      "5x^7/2^4\n",
+      "\tEnc. result:\t-0.008748005707963065\n",
+      "\tPlain result:\t-0.00874800000000001\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Want to calculate g, i.e., we need 35x, 35x^3, 21x^5, 5x^7, all divided by 2^4\n",
+    "\n",
+    "\n",
+    "# PROBLEM - HAVE NOT MANAGED TO GET SCALE STABILIZATION\n",
+    "x_coeff = seal.Ciphertext()\n",
+    "add_many_coeff(35, x_copy, evaluator, x_coeff)\n",
+    "divByPo2(x_coeff, 4)\n",
+    "\n",
+    "tmp_result = seal.Plaintext()\n",
+    "decryptor.decrypt(x_coeff, tmp_result)\n",
+    "print(\"35x/2^4\")\n",
+    "util.print_info(x_coeff, decryptor, context, encoder, 35*x/2**4)\n",
+    "\n",
+    "x3_coeff = seal.Ciphertext()\n",
+    "add_many_coeff(35, x3_enc, evaluator, x3_coeff)\n",
+    "divByPo2(x3_coeff, 4)\n",
+    "decryptor.decrypt(x3_coeff, tmp_result)\n",
+    "print(\"35x^3/2^4\")\n",
+    "util.print_info(x3_coeff, decryptor, context, encoder, 35*x**3/2**4)\n",
+    "\n",
+    "x5_coeff = seal.Ciphertext()\n",
+    "add_many_coeff(21, x5_enc, evaluator, x5_coeff)\n",
+    "divByPo2(x5_coeff, 4)\n",
+    "decryptor.decrypt(x5_coeff, tmp_result)\n",
+    "print(\"21x^5/2^4\")\n",
+    "util.print_info(x5_coeff, decryptor, context, encoder, 21*x**5/2**4)\n",
+    "\n",
+    "x7_coeff = seal.Ciphertext()\n",
+    "add_many_coeff(5, x7_enc, evaluator, x7_coeff)\n",
+    "divByPo2(x7_coeff, 4)\n",
+    "decryptor.decrypt(x7_coeff, tmp_result)\n",
+    "print(\"5x^7/2^4\")\n",
+    "util.print_info(x7_coeff, decryptor, context, encoder, 5*x**7/2**4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With all powers we need, we are now ready to calculate the value of the polynomial. Note however that all ciphertexts have different scale and that we need to change the level of 35x and 35x^3 to be able to compute sums of the powers. This can be done in two ways, following `5_ckks_basics.ipynb`. I will first try the easiest method of simply setting the scale manually, since in all cases, the scale is alsmost equal to the original scale. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scale of 5x^7/2^4:\t549887427425.6552\n",
+      "35x\n",
+      "\tEnc. result:\t-1.3121985474725357\n",
+      "\tPlain result:\t-1.3125000000000002\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n",
+      "35x^3\n",
+      "\tEnc. result:\t-0.47242798055208546\n",
+      "\tPlain result:\t-0.47250000000000025\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Note that 35x and 35x^3 are still at  different levels, which must be handled. \n",
+    "evaluator.mod_switch_to_inplace(x_coeff, x7_coeff.parms_id())\n",
+    "evaluator.mod_switch_to_inplace(x3_coeff, x7_coeff.parms_id())\n",
+    "# Now manually set scale to the original (which is not true, and leads to loss in precision). \n",
+    "# It is however, the simplest solution. \n",
+    "\n",
+    "print(f\"Scale of 5x^7/2^4:\\t{x7_coeff.scale}\")\n",
+    "\n",
+    "x_coeff.scale = x7_coeff.scale; x3_coeff.scale=x7_coeff.scale; x5_coeff.scale=x7_coeff.scale\n",
+    "\n",
+    "# Can we still decrypt to the correct values after rescaling?\n",
+    "print(\"35x\")\n",
+    "util.print_info(x_coeff, decryptor, context, encoder, 35*x/2**4)\n",
+    "\n",
+    "print(\"35x^3\")\n",
+    "util.print_info(x3_coeff, decryptor, context, encoder, 35*x**3/2**4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is now possible to sum all terms together! The cell below calculates the result and prints some intermediate results. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35x-35x^3\n",
+      "\tEnc. result:\t-0.8397705669204507\n",
+      "\tPlain result:\t-0.84\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n",
+      "\tEnc. result:\t-0.9418242678524709\n",
+      "\tPlain result:\t-0.94206\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n",
+      "34359738368.0\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "scale mismatch",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 26\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Finally add -5x^7/2**4\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(x7_coeff\u001b[39m.\u001b[39mscale)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m evaluator\u001b[39m.\u001b[39;49msub_inplace(res, x7_coeff)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m decryptor\u001b[39m.\u001b[39mdecrypt(res, tmp_result)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnc. result:\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(encoder\u001b[39m.\u001b[39mdecode_double(tmp_result)[\u001b[39m0\u001b[39m]))\n",
+      "\u001b[0;31mValueError\u001b[0m: scale mismatch"
+     ]
+    }
+   ],
+   "source": [
+    "res = seal.Ciphertext()\n",
+    "# First (35x-35x^3)/2**4\n",
+    "evaluator.sub(x_coeff, x3_coeff, res)\n",
+    "print(\"35x-35x^3\")\n",
+    "util.print_info(res, decryptor, context,encoder, (35*x-35*x**3)/2**4)\n",
+    "# Now add 21x^5/2**4\n",
+    "evaluator.add_inplace(res, x5_coeff)\n",
+    "util.print_info(res, decryptor, context, encoder, (35*x-35*x**3+21*x**5)/2**4)\n",
+    "# Finally add -5x^7/2**4\n",
+    "print(x7_coeff.scale)\n",
+    "evaluator.sub_inplace(res, x7_coeff)\n",
+    "\n",
+    "decryptor.decrypt(res, tmp_result)\n",
+    "print(\"Enc. result:\\t\" + str(encoder.decode_double(tmp_result)[0]))\n",
+    "print(f\"Plain result:\\t{(35*x-35*x**3+21*x**5-5*x**7)/2**4}\")\n"
    ]
   },
   {
