--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -662,22 +662,16 @@
       "\tPlain result:\t-0.84\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n",
+      "35x-35x^3+21x^5\n",
       "\tEnc. result:\t-0.9418242678524709\n",
       "\tPlain result:\t-0.94206\n",
       "\tScale:\t549887427425.6552\n",
       "\tCh. ind:\t2\n",
-      "34359738368.0\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "scale mismatch",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/davsv512@user.uu.se/python/SealAPI_Tutorial/comparison.ipynb Cell 26\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Finally add -5x^7/2**4\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mprint\u001b[39m(x7_coeff\u001b[39m.\u001b[39mscale)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m evaluator\u001b[39m.\u001b[39;49msub_inplace(res, x7_coeff)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m decryptor\u001b[39m.\u001b[39mdecrypt(res, tmp_result)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B130.238.57.42/home/davsv512%40user.uu.se/python/SealAPI_Tutorial/comparison.ipynb#X34sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mEnc. result:\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m+\u001b[39m \u001b[39mstr\u001b[39m(encoder\u001b[39m.\u001b[39mdecode_double(tmp_result)[\u001b[39m0\u001b[39m]))\n",
-      "\u001b[0;31mValueError\u001b[0m: scale mismatch"
+      "g(x) = 35x-35x^3+21x^5-5x^7\n",
+      "\tEnc. result:\t-0.933076262144508\n",
+      "\tPlain result:\t-0.933312\n",
+      "\tScale:\t549887427425.6552\n",
+      "\tCh. ind:\t2\n"
      ]
     }
    ],
@@ -689,14 +683,15 @@
     "util.print_info(res, decryptor, context,encoder, (35*x-35*x**3)/2**4)\n",
     "# Now add 21x^5/2**4\n",
     "evaluator.add_inplace(res, x5_coeff)\n",
+    "print(\"35x-35x^3+21x^5\")\n",
     "util.print_info(res, decryptor, context, encoder, (35*x-35*x**3+21*x**5)/2**4)\n",
     "# Finally add -5x^7/2**4\n",
-    "print(x7_coeff.scale)\n",
+    "\n",
     "evaluator.sub_inplace(res, x7_coeff)\n",
     "\n",
-    "decryptor.decrypt(res, tmp_result)\n",
-    "print(\"Enc. result:\\t\" + str(encoder.decode_double(tmp_result)[0]))\n",
-    "print(f\"Plain result:\\t{(35*x-35*x**3+21*x**5-5*x**7)/2**4}\")\n"
+    "print(\"g(x) = 35x-35x^3+21x^5-5x^7\")\n",
+    "util.print_info(res, decryptor, context, encoder, (35*x-35*x**3+21*x**5-5*x**7)/2**4)\n",
+    "\n"
    ]
   },
   {
