--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "# A function for controlling size and scale of ciphertext after multiplication\n",
-    "def relinearize_and_rescale_inplace(cipher : seal.Ciphertext, eval : seal.Evaluator, relin_keys : seal.RelinKeys):\n",
+    "def relinearize_and_rescale_inplace(cipher : seal.Ciphertext, evaluator : seal.Evaluator, relin_keys : seal.RelinKeys):\n",
     "    # Control size by relinearization\n",
     "    evaluator.relinearize_inplace(cipher, relin_keys)\n",
     "    # Control scale by rescaling\n",
